Correção de erros no merge